# llvm

./: .gitattributes  .gitignore  basename.sh  build  build.sh  fix_llvm_windows_assertions.sh  fix_windows_assertions.sh  local_build.sh  package
.github/workflows/: ci.yml
bindings/: CMakeLists.txt  llvm.cpp
bindings/include/: lld_bindings.h
bindings/src/: lld.cpp
patches/: disable_clang_tools.patch
zstd/: CMakeLists.txt
